--- a/style.css
+++ b/style.css
@@ -89,11 +89,20 @@
     width: 100%;
 }
 
-/*** Esercizio  ***/
+/*** Esercizio 3 ***/
 .ex-3-square {
     transition: border-radius 2s ease-out;
 }
 
 .ex-3-square:hover {
     border-radius: 50%;
+}
+
+/*** Esercizio 4 ***/
+.ex-4-square {
+    transition: opacity 2s ease-out;
+}
+
+.ex-4-square:hover {
+    opacity: 0;
 }
