--- a/style.css
+++ b/style.css
@@ -119,3 +119,11 @@
 .ex-5-square:active {
     scale: 120%;
 }
+
+/*** Esercizio 6 ***/
+.ex-6-img {
+    transition: filter 0.2s ease-in;
+}
+.ex-6-img:hover {
+    filter: grayscale(1);
+}
